# pytest-jira-xray

./: .pre-commit-config.yaml  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
src/pytest_jira_xray/: constant.py  constants.py  file_publisher.py  helper.py  hooks.py  plugin.py  test_execution.py  test_run.py  xray_publisher.py  xray_report.py  xray_result.py
src/pytest_xray/: constants.py  helper.py  hooks.py  plugin.py  test_execution.py  test_run.py  xray_publisher.py  xray_report.py  xray_result.py  xray_statuses.py  xray_test.py  xray_test_execution.py
src/pytest_xray/resources/: xray.schema.json
tests/: conftest.py  test_helper.py  test_model.py  test_xray_config.py  test_xray_json_reporting.py
tests/Functional/: test_xray_config.py  test_xray_json_reporting.py
tests/Unit/: test_file_publisher.py
tests/functional/auth/: test_oauth.py
tests/functional/json_reports/: test_json_exporter.py
tests/functional/plugin_usage/: test_xray_execution_summary.py  test_xray_plugin_config.py  test_xray_project_key.py  test_xray_test_execution_key.py  test_xray_test_run_description.py  test_xray_test_run_status_mapping.py
tests/functional/xray_exporter/: test_xray_api_exporter.py
tests/unit/: test_helper.py  test_model.py
