[metadata]
name = pytest-jira-xray
version = attr: package.__version__
url = https://github.com/fundakol/pytest-jira-xray
author = Lukasz Fundakowski
author_email = fundakol@yahoo.com
description = pytest plugin to integrate tests with JIRA XRAY
long_description = file: README.rst
python_requires = >=3.7
keywords = pytest,JIRA,XRAY
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Framework :: Pytest

[options]
packages = find:
package_dir =
    =src
install_requires =
    pytest>=7
    requests>=2
    setuptools>=62.6

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    xray=pytest_jira_xray.plugin

[flake8]
max-line-length = 120
